[tool.poetry]
name = "okx-lp-manager"
version = "0.1.0"
description = "OKX钱包LP管理系统"
authors = ["wyq"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.12"
uvicorn = {extras = ["standard"], version = "^0.34.2"}
web3 = "^7.12.0"
requests = "^2.32.3"
redis = "^6.1.0"
asyncpg = "^0.30.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.41"}
pydantic = "^2.11.5"
pydantic-settings = "^2.9.1"
celery = "^5.5.2"
python-multipart = "^0.0.20"
aiofiles = "^24.1.0"
httpx = "^0.28.1"
loguru = "^0.7.3"
cryptography = "^45.0.2"
schedule = "^1.2.2"
aiomysql = "^0.2.0"
pymysql = "^1.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
black = "^23.0"
isort = "^5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
